small change to a url in the documentation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	    You have to admit though, that RGAL sounds much catchier.<br></font>
     </p>
     <p>
-        <a href="http://noelwarr.github.com/rgal/ruby/doc/CGAL.html">Documentation</a>
+        <a href="http://noelwarr.github.com/rgal/doc/CGAL.html">Documentation</a>
     </p>
     <p>
         <a href="http://www.github.com/noelwarr/rgal">Source</a>
