corrected CGAL's url

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <font size="4">RGAL : <u>R</u>uby <u>G</u>eometry <u>A</u>lgorithms <u>L</u>ibrary*</font><br>
         <font size="2">
             *This is in fact bull$%&t.<br>
-	    It is a wrapper for a small percentage of <a href="http://www.cgal.com">CGAL</a>'s classes and methods.<br>
+	    It is a wrapper for a small percentage of <a href="http://www.cgal.org">CGAL</a>'s classes and methods.<br>
 	    You have to admit though, that RGAL sounds much catchier.<br></font>
     </p>
     <p>
